--- a/SimpleWeather.UWP/Preferences/Settings_Features.xaml
+++ b/SimpleWeather.UWP/Preferences/Settings_Features.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:helpers="using:SimpleWeather.UWP.Helpers"
     xmlns:local="using:SimpleWeather.UWP.Preferences"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:mtuc="using:Microsoft.Toolkit.Uwp.UI.Controls"
@@ -45,6 +46,10 @@
                     x:Uid="FeatureOption_Charts"
                     Content="Charts"
                     IsChecked="{x:Bind uwpUtils:FeatureSettings.Charts, Mode=TwoWay}" />
+                <CheckBox
+                    d:Content="Weather Summary"
+                    Content="{helpers:StringRes Name='pref_title_feature_summary'}"
+                    IsChecked="{x:Bind uwpUtils:FeatureSettings.WeatherSummary, Mode=TwoWay}" />
                 <CheckBox
                     x:Uid="FeatureOption_Details"
                     Content="Weather Details"
